welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:33: error: not found: value posfinale
  	posfinale=true
        ^SnakeBuggle:35: error: not found: value posfinale
  return posfinale
         ^SnakeBuggle:35: warning: enclosing method rep has result type Unit: return value discarded
  return posfinale
  ^